# rpcemu-extended

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  build-macos.sh  build-windows.sh  build.sh  setup-build-env.sh  setup-cross-build-env.sh  setup-macos-cross-build-env.sh  setup-runtime-env.sh
.github/workflows/: build.yml
cmake/: FindWxWidgets.cmake  mingw-w64-x86_64.cmake  osxcross-arm64.cmake  osxcross-x86_64.cmake
configs/: Default.cfg
default/hostfs/: RPCEmu,fff
docs/: arm64-dynarec.md  debugcmd.md  debugger-trace-spec.md  debugger-tracing.md  dynarec.md  hostcmd.md  macos-build.md  peripherals.md  podules.md  windows-build.md  windows-port.md
machines/Default/: cmos.ram
packaging/: rpcemu.desktop
poduleroms/: hostfs,ffa
resources/: blank-e-800.adf  blank-f-1600.adf  blank-l-640.adl  blank-pc-1440.img  blank-pc-720.img
riscos-progs/HostCmd/: Makefile  hostcmd,ffa  hostcmd.s
riscos-progs/HostFS/: hostfs,ffa  hostfs.s
src/: CMakeLists.txt  arm.c  arm_common.c  arm_disasm.c  arm_disasm.h  arm_dynarec.c  arm_dynarec_ops.h  broadcast_relay.c  broadcast_relay.h  cdrom-ioctl.c  cdrom-ioctl.h  cdrom-iso.c  cmos.c  cmos.h  codegen_amd64.c  codegen_arm64.c  codegen_arm64.h  codegen_x86_common.h  cp15.c  cp15.h  debugcmd.c  debugcmd.h  disc.c  disc_adf.c  disc_hfe.c  edid.c  edid.h  fdc.c  fpa.c  hostcmd.c  hostcmd.h  hostfs.c  hostfs.h  i8042.c  icside.c  ide.c  ide.h  iomd.c  iomd.h  keyboard.c  (+43 more)
src/gui/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  config_paths.cpp  config_paths.h  config_selector_dialog.cpp  config_selector_dialog.h  data_paths.cpp  data_paths.h  emulator_host.cpp  emulator_host.h  emulator_panel.cpp  emulator_panel.h  emulator_snapshot.cpp  emulator_snapshot.h  gui_bridge.h  gui_preferences.cpp  gui_preferences.h  headless_bridge.cpp  headless_bridge.h  headless_main.cpp  headless_main.h  host_types.h  input_helpers.cpp  input_helpers.h  keyboard_x.c  machine_edit_dialog.cpp  machine_edit_dialog.h  machine_inspector_window.cpp  machine_inspector_window.h  machine_snapshot.h  main.cpp  main_frame.cpp  main_frame.h  main_frame_menus.cpp  nat_edit_dialog.cpp  nat_edit_dialog.h  nat_list_dialog.cpp  nat_list_dialog.h  parallel_dialog.cpp  (+13 more)
src/podules/: ad1848.c  ad1848.h  aka05.c  aka12.c  aka12.h  aka16.c  am7202a.c  am7202a.h  lark.c  lark.h  midimax.c
src/podules/common/: 6522.c  6522.h  joystick_api.h  joystick_sdl2.c  midi.h  midi_alsa.c  midi_stub.c  n16550.c  n16550.h  scc2691.c  scc2691.h  sound_alsain.c  sound_in.h  sound_in_null.c  sound_out.h  sound_out_sdl2.c
src/tools/: CMakeLists.txt  rpcemu_run.c
tests/: CMakeLists.txt  test_jit_branch.c  test_jit_e2e.c  test_jit_flags.c  test_jit_ldmstm.c  test_jit_mem.c  test_jit_mul.c  test_stubs.c
tools/mcp/: README.md  mcp.json.example  rpcemu_mcp.py
